<resources>
    <string name="app_name">YOOFY</string>
    <string name="language">English</string>
    <string name="lan">हिंदी</string>
    <string name="username">Username</string>
    <string name="phone_number">Phone Number</string>
    <string name="login">LOGIN</string>
    <string name="menu">MENU</string>
    <string name="sign_out">SIGN OUT</string>
    <string name="take_stock">Closing Stock</string>
    <string name="rewards">Rewards</string>
    <string name="team">Team</string>
    <string name="offers">OFFERS</string>
    <string name="settings">Settings</string>
    <string name="submit">SUBMIT</string>
    <string name="Add_new_team">Add New CSM</string>
    <string name="add_new_number">Add New Number</string>
    <string name="select_store">Select Store</string>
    <string name="turn_off_notifications">Notifications</string>
    <string name="change_language">Language</string>
    <string name="helpline_number">Technical Support</string>
    <string name="request_stock">REQUEST STOCK</string>
    <string name="yes">Yes</string>
    <string name="ANALYTICS">Purchase</string>
    <string name="hindi">हिंदी</string>
    <string name="close">CLOSE</string>
    <string name="back">BACK</string>
    <string name="receipt">RECEIPT</string>
    <string name="incoming_stock">Incoming Stock</string>
    <string name="sales">Sales</string>
    <string name="store">STORE</string>
    <string name="category">CATEGORY</string>
    <string name="stock_in_hand">STOCK IN HAND</string>
    <string name="remember_me">Remember Me</string>
    <string name="customer_care">Customer Care</string>
    <string name="submit_">Are you sure you want to submit?</string>
    <string name="quantity_">The quantity you have entered is more than current stock quantity for one or more items. Please Check.</string>
    <string name="a">Analytics</string>
    <string name="tac">I agree to terms and conditions</string>
    <string name="purchases">Purchases</string>
    <string name="closing_stock">Closing Stock</string>
    <string name="cc">Standard calling charges applicable.</string>
    <string name="call">Call Now</string>
    <string name="update">Inventory updated successfully</string>
    <string name="notification">Notifications</string>
    <string name="your_settings">Your Settings</string>
    <string name="edit_avatar">EDIT AVATAR</string>
    <string name="name">Name</string>
    <string name="email">EMAIL</string>
    <string name="password">PASSWORD</string>
    <string name="choose_store">Choose Store</string>
    <string name="manage_store">Manage Stores</string>
    <string name="add">Add</string>
    <string name="manage_team">Manage Team</string>
    <string name="create_new">Create New</string>
    <string name="done">Done</string>
    <string name="Set_Initial_Password">Set Initial Password</string>
    <string name="location">Location (Which Store)</string>
    <string name="email_address">Email Address</string>
    <string name="change_password">Change Password</string>
    <string name="Edit_Team">Edit Team</string>
    <string name="District">District</string>
    <string name="Depot">Depot</string>
    <string name="Licen_Number">Licence Number</string>
    <string name="shopowner">Shop Owner</string>
    <string name="csm">CSM</string>
    <string name="state">State</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="update_">Update</string>
    <string name="choose_avatar">Choose Avatar</string>
    <string name="choose_new_password">Choose New Password</string>
    <string name="skip">Skip</string>
    <string name="termsandconditions">Terms and Conditions</string>
    <string name="Winning_Criteria">Winning Criteria:</string>
    <string name="p1">A. 100+ SKU data entry daily.</string>
    <string name="t1">YOOFY V4 POC duration is from 5th Feb 2018 for a month. This duration may be extended by 2 weeks in case of any technical issues are identified with YOOFY requiring more time to get feedback.</string>
    <string name="t2">Assured rewards will be given to all 3 CSMs and the owner/manager of the outlet.</string>
    <string name="t3">Participating outlets must ensure data entry corresponding to at least 100 SKUs for at least 20 days during the POC (25 days in case of extended POC) to qualify for rewards.</string>
    <string name="t4">In case, the data submission is found to be incorrect, the concerned Outlet/CSM will not be eligible to receive any points / rewards.</string>
    <string name="t5">All participating outlets will have to register with YOOFY coordinator. Only registered outlets will be eligible for rewards.</string>
    <string name="t6">Winners would be announced at the end of the POC. The rewards will be presented to winners in a separate ceremony after the end of the POC. </string>
    <string name="t7">The decision of the JIL management shall be final and binding in all respects.</string>
    <string name="p2">B. 30+ SKU data entry daily</string>
    <string name="t1_p2">YOOFY V4 POC duration is from 5th Feb 2018 for a month. This duration may be extended by 2 weeks in case of any technical issues are identified with YOOFY requiring more time to get feedback.</string>
    <string name="t2_p2">Top 3 CSMs will be eligible for bumper rewards (First: Smartphone, Second: LCD TV, Third: Bluetooth speaker).</string>
    <string name="t3_p2">Participating outlets must ensure data entry corresponding to at least 30 SKUs for at least 20 days during the POC (25 days in case of extended POC) to qualify for rewards.</string>
    <string name="t4_p2">There will be some consolation rewards for participants, maximum 100 consolation rewards will be rewarded. </string>
    <string name="t5_p2">Consolation rewards will not exceed 75% of the total participants pool qualifying the eligibility criteria for rewards.</string>
    <string name="t6_p2">The POC is being conducted in 3 cities/areas namely – Jaipur, Jodhpur, and Alwar/Bharatpur. All rewards are based on winning criteria and on state rank (Not for individual cities). </string>
    <string name="t7_p2">All CSMs in a shop can submit information on YOOFY separately. Each CSM will score a point for successful submission every day. However, the data will be updated in YOOFY only for the last submission for the day.</string>
    <string name="t8_p2">The CSMs scores will be reset (made zero) at the beginning of the POC. This is to ensure that everyone gets the same opportunity to compete for the rewards. </string>
    <string name="t9_p2">In case of a tie, winners will be decided by draw of lots. </string>
    <string name="t10_p2">In case, the data submission is found to be incorrect, the concerned CSM will not be eligible to receive any points / rewards.</string>
    <string name="t11_p2">Winners would be announced at the end of the POC. The rewards will be presented to winners in a separate ceremony after the end of the POC. </string>
    <string name="t12_p2">The decision of the JIL management shall be final and binding in all respects.</string>
    <string name="t8">Winners would be announced at the end of the POC. The rewards will be presented to winners in a separate ceremony after the end of the POC.</string>
    <string name="t9">The decision of the JIL management shall be final and binding in all respects.</string>
    <string name="offline">Please check Data/WiFi connection and try again.</string>
    <string name="reports">Reports</string>
    <string name="city">City</string>
    <string name="phn_call">Default call rates would be applied. Press okay to continue</string>
    <string name="okay">Okay</string>
    <string name="who_do_you_stock">What Do You Stock</string>
    <string name="suppliers">Suppliers</string>
    <string name="Selling_Prise">Set Selling Price</string>
    <string name="GridView">Grid View</string>
    <string name="ListView">List View</string>
    <string name="stock">Stock</string>
    <string name="transfer_stock">Transfer Stock</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="what">What</string>
    <string name="number_of_bottles">Number Of Bottles</string>
    <string name="transfer">Transfer</string>
    <string name="give_access1">Give Access To Edit Selling Price Of Bottles In Your Store</string>
    <string name="give_access2">Give Access To Transfer Stock From One Store To Another</string>
    <string name="give_access3">Give Access to View Reports on Sales and Purchase Activity</string>
    <string name="no">No</string>
    <string name="search_product">SEARCH SPECIFIC PRODUCT</string>
    <string name="search">Search Products</string>
    <string name="oh_snap">Oh Snap...No Products Found!</string>
    <string name="no_result">No Results Found.Please check the spelling or try a different search.</string>
    <string name="referral_leader">Referral Leader Board</string>
    <string name="csm_leader">CSM Leader Board</string>
    <string name="share_refferal">Share Referral Code</string>
    <string name="refferal_code">Referral Code</string>
    <string name="referral_friend">Refer Yoofy</string>
    <string name="win_reward">Win Rewards!</string>
    <string name="shareandwin">Refer Yoofy to your friends in trade and earn coins that can be redeemed for exciting rewards!</string>
    <string name="how_point_works">How The Point System Works</string>
    <string name="pointcal">Point System Calculation</string>
    <string name="r1">On completion of CSM account creation,referee gets 1 referral point.</string>
    <string name="r2">If referred outlet starts data capturing within 3 days of downloading, referee gets 2 more points.</string>
    <string name="r3">For every continuous data submission for a week referee gets 2 additional referral points.</string>
    <string name="r4">Valid for first month only.</string>
    <string name="select_category">Select Category</string>
    <string name="select_brand">Select Brand</string>
    <string name="select_product">Select Product</string>
    <string name="profile_settings">Profile Settings</string>
    <string name="other_settings">Other Settings</string>
    <string name="no_net">No Internet Connection</string>
    <string name="no_net_1">Seems like you are out of coverage area.\nCheck your internet and try again!</string>
    <string name="tell_us_more">Tell Us More</string>
    <string name="choose_issue">Choose what kind of issue you are facing</string>
    <string name="Technical_App_Issue">Technical App Issue</string>
    <string name="Understanding_Rewards_Points">Understanding Rewards Points</string>
    <string name="Product_Quality_Issue">Product Quality Issue</string>
    <string name="tell_us_more1">Let us know if you are facing any issue with Yoofy.</string>
    <string name="tell_us_more1_">Let us know if you are facing any issues related to rewards &amp; referral system.</string>
    <string name="tell_us_more2">The app is hanging or having bugs</string>
    <string name="tell_us_more3">Unable to update product information</string>
    <string name="tell_us_more4">Please provide details of the quality issues:</string>
    <string name="Unable_reports">Unable to view reports</string>
    <string name="other">Other:</string>
    <string name="what_wrong">Tell us whats wrong..</string>
    <string name="Congratulations">Congratulations!</string>
    <string name="You_have_successfully_redeemed">You have successfully redeemed</string>
    <string name="against">against:</string>
    <string name="Note">Note: </string>
    <string name="Request_is_under_process">Your chosen reward will be delivered within 15 working days!</string>
    <string name="u1">Reward points are not updating on stock submit</string>
    <string name="u2">My displayed rank is incorrect.</string>
    <string name="u3">My wallet score is incorrect -</string>
</resources>