<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.oodi.jingoo.activity.ShareReferralInstructionActivity">

    <include layout="@layout/coomon_header"
        android:id="@+id/i1"/>

    <LinearLayout
        android:layout_below="@id/i1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">

        <TextView
            android:textSize="22sp"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pointcal"/>

        <View
            android:layout_marginBottom="8dp"
            android:layout_marginTop="32dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/line_color"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/r1"/>

        <View
            android:layout_marginBottom="8dp"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/line_color"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/r2"/>

        <View
            android:layout_marginBottom="8dp"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/line_color"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/r3"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/r4"/>

        <View
            android:layout_marginBottom="8dp"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/line_color"/>

    </LinearLayout>

</RelativeLayout>
