<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context="com.oodi.jingoo.activity.RewardRedeemActivity">

    <include
        android:id="@+id/i1"
        layout="@layout/coomon_header" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <ImageView
        android:padding="8dp"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:src="@drawable/rew"
        android:layout_gravity="center"
        android:layout_width="200dp"
        android:layout_height="200dp" />

    <TextView
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:text="@string/Congratulations"/>

    <TextView
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/You_have_successfully_redeemed"
        android:gravity="center"
        android:textColor="@color/black"/>

    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtPoints"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/bg"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/against"
            android:gravity="center"
            android:textColor="@color/black"/>

    </LinearLayout>

    <TextView
        android:id="@+id/txtName"
        android:textSize="18sp"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/bg"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line_color"
        android:layout_margin="@dimen/activity_horizontal_margin"/>

    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:textStyle="italic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/bg"
            android:text="@string/Note"/>
        <TextView
            android:textStyle="italic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:text="@string/Request_is_under_process"
            android:gravity="center"
            android:textColor="@color/black"/>
    </LinearLayout>
<!--
    <TextView
        android:textStyle="italic"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Contact_customer_care"
        android:gravity="center"
        android:textColor="@color/black"/>-->
    <Button
        android:id="@+id/btnDone"
        android:background="@color/bg"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:text="@string/done"/>

    </LinearLayout>

    </ScrollView>

</LinearLayout>
